--- a/contact-form/templates/base.html.twig
+++ b/contact-form/templates/base.html.twig
@@ -13,9 +13,11 @@
         <div>
             <ul class="navbar-nav mr-auto">
                 {% if not app.user %}
-                <li class="nav-item"><a class="nav-link" href="#">Connexion au back-office</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ path('security_register') }}">Inscription</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ path('security_login') }}">Connexion</a></li>
                 {% else %}
-                <li class="nav-item"><a class="nav-link" href="#">Déconnexion</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ path('security_login') }}">Accéder au back-office</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ path('security_logout') }}">Déconnexion</a></li>
                 {% endif %}
             </ul>
         </div>
