--- a/contact-form/templates/home.html.twig
+++ b/contact-form/templates/home.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <h1>Test technique</h1>
 <div class="container">
-    <img class="row" src="https://placehold.it/512x512" />
+    <img class="row" src="https://picsum.photos/1024/512" />
     {% if notif is defined %}
     <h2 class="m-t-5">{{ notif }}</h2>
     {% else %}
