--- a/contact-form/templates/admin/admin.html.twig
+++ b/contact-form/templates/admin/admin.html.twig
@@ -6,44 +6,44 @@
 <h1>Panneau d'Administration</h1>
 <div id="contact_container">
     <h4>vous avez {{ contacts | length }} messages : </h4>
-    <form action="{{ path('admin') }}" method="post">
+    <form action="{{ path('admin_check') }}" method="POST">
         <h4>vous avez X messages non lus : </h4>
 
         {% for message in contacts %}
             {% if message.viewed == 0 %}
-                <div class="comment">
+            <div class="comment">
+                <div>
+                    <input type="checkbox">
+                    <div class="col-3">
+                        De : {{ message.lastname }} {{ message.firstname }}
+                    </div>
+                    <div class="col">
+                        Mail : {{ message.mail }}
+                    </div>
+                    <div class="col">
+                        Téléphone : {{ message.phone }}
+                    </div>
+                    <p class="col">
+                        {{ message.content | raw}}
+                    <p>
                     <div>
-                        <div class="col-3">
-                            De : {{ message.lastname }} {{ message.firstname }}
-                        </div>
-                        <div class="col">
-                            Mail : {{ message.mail }}
-                        </div>
-                        <div class="col">
-                            Téléphone : {{ message.phone }}
-                        </div>
-                        <p class="col">
-                            {{ message.content | raw}}
-                        <p>
-                        <div>
 
-                        </div>
                     </div>
                 </div>
+            </div>
             {% endif %}
         {% endfor %}
-
-        {{ form(formContact) }}
 
         <button class="btn btn-primary">Actualiser</button>
     </form>
     <hr>
-    <form action="{{ path('admin') }}" method="post"></form>
+    <form action="{{ path('admin_check') }}" method="post"></form>
     <h4>vous avez X messages lus : </h4>
     {% for message in contacts %}
     {% if message.viewed == 1 %}
     <div class="comment">
         <div>
+            <input type="checkbox" checked>
             <div class="col-3">
                 De : {{ message.lastname }} {{ message.firstname }}
             </div>
