--- a/contact-form/templates/base.html.twig
+++ b/contact-form/templates/base.html.twig
@@ -16,7 +16,7 @@
                 <li class="nav-item"><a class="nav-link" href="{{ path('security_register') }}">Inscription</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ path('security_login') }}">Connexion</a></li>
                 {% else %}
-                <li class="nav-item"><a class="nav-link" href="{{ path('admin') }}">Accéder au back-office</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ path('admin_dashboard') }}">Accéder au back-office</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ path('security_logout') }}">Déconnexion</a></li>
                 {% endif %}
             </ul>
