--- a/contact-form/templates/security/login.html.twig
+++ b/contact-form/templates/security/login.html.twig
@@ -3,14 +3,15 @@
 {% block title %}Se connecter{% endblock %}
 
 {% block body %}
+
 <div class="container">
     <h1>Connectez vous</h1>
     <form action="{{ path('security_login') }}" method="post">
         <div class="form-group">
-            <input placeholder="Nom d'utilisateur" type="text" class="form-control" name="_username" requied>
+            <input placeholder="Nom d'utilisateur" type="text" class="form-control" name="_username" required>
         </div>
         <div class="form-group">
-            <input placeholder="Mot de passe" type="password" class="form-control" name="_password" requied>
+            <input placeholder="Mot de passe" type="password" class="form-control" name="_password" required>
         </div>
         <div class="form-group">
             <button class="btn btn-primary">Se connecter</button>
