Modification affichage des commentaires lus, ajout du JS et CSS pour la partie front du dashboard

--- a/contact-form/templates/admin/admin.html.twig
+++ b/contact-form/templates/admin/admin.html.twig
@@ -5,19 +5,20 @@
 {% block body %}
 <h1>Panneau d'Administration</h1>
 <div id="contact_container">
-    <h4>vous avez {{ contacts | length }} messages : </h4>
-    <form action="{{ path('admin_view_message') }}" method="POST" >
-        <input type="hidden" name="_token" value="{{ csrf_token('view-message') }}"/>
-        <h4>vous avez X messages non lus : </h4>
+    {% if new_message | length > 0 %}
+    <h4>Il y a {{ new_message | length }} message(s) non lus : </h4>
+    <form action="{{ path('admin_view_message') }}" method="POST">
+        <input type="hidden" name="_token" value="{{ csrf_token('view-message') }}" />
         
         {% for message in contacts %}
-            {% if message.viewed == 0 %}
+        {% if message.viewed == 0 %}
+        <div class="comment_container">
             <div class="comment">
                 <input type="checkbox" name="message[{{message.id}}]">
                 <div class="container">
-                    <div class="col-3">
+                    <h4 class="col-3">
                         De : {{ message.lastname }} {{ message.firstname }}
-                    </div>
+                    </h4>
                     <div class="col">
                         Mail : {{ message.mail }}
                     </div>
@@ -29,38 +30,43 @@
                     <p>
                 </div>
             </div>
-            {% endif %}
+        </div>
+        {% endif %}
         {% endfor %}
 
-        <button class="btn btn-primary">Actualiser</button>
+        <button class="btn btn-primary">Marquer comme lu</button>
     </form>
+    {% endif %}
     <hr>
     <form action="{{ path('admin_view_message') }}" method="post">
-    <input type="hidden" name="_token" value="{{ csrf_token('view-message') }}"/>
-    <h4>vous avez X messages lus : </h4>
+        <input type="hidden" name="_token" value="{{ csrf_token('view-message') }}" />
+        <h4>Messages lus : </h4>
 
-    {% for message in contacts %}
-    {% if message.viewed == 1 %}
-    <div class="comment">
-        <input type="checkbox" name="message[{{message.id}}]">
-        <div class="container">
-            <div class="col-3">
-                De : {{ message.lastname }} {{ message.firstname }}
+        {% for message in contacts %}
+        {% if message.viewed == 1 %}
+        <div class="comment_container">
+            <div class="comment">
+                <input type="checkbox" name="message[{{message.id}}]">
+                <div class="container">
+                    <h4 class="col-3">
+                        De : {{ message.lastname }} {{ message.firstname }}
+                    </h4>
+                    <div class="col">
+                        Mail : {{ message.mail }}
+                    </div>
+                    <div class="col">
+                        Téléphone : {{ message.phone }}
+                    </div>
+                    <p class="col">
+                        {{ message.content | raw}}
+                    <p>
+                </div>
             </div>
-            <div class="col">
-                Mail : {{ message.mail }}
-            </div>
-            <div class="col">
-                Téléphone : {{ message.phone }}
-            </div>
-            <p class="col">
-                {{ message.content | raw}}
-            <p>
         </div>
-    </div>
-    {% endif %}
-    {% endfor %}
-    <button class="btn btn-primary">Marquer comme non lu</button>
+        {% endif %}
+        {% endfor %}
+        <button class="btn btn-primary">Marquer comme non lu</button>
     </form>
 </div>
+<script src="{{ asset('js/admin.js') }}"></script>
 {% endblock %}
