--- a/contact-form/templates/base.html.twig
+++ b/contact-form/templates/base.html.twig
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}ACSEO - Test Technique{% endblock %}</title>
         <link rel="stylesheet" href="https://bootswatch.com/4/pulse/bootstrap.min.css">
+        <link rel="stylesheet" href="{{ asset('css/style.css') }}" />
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
